--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.diegohr.ejercicio_bitsa_bitnami">
+    package="com.diegohr.ejercicio_bitsa_bitnovo">
 
     <application
+        android:name="com.diegohr.ejercicio_bitsa_bitnovo.CastleGameApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ejercicio_bitsabitnami">
         <activity
-            android:name=".MainActivity"
+            android:name="com.diegohr.ejercicio_bitsa_bitnovo.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.Ejercicio_bitsabitnami.NoActionBar">
             <intent-filter>
